--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="comfortaa" id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <style>
+  </style>
 </html>
